
Reggie, 6.11.1998:
------------------
- Replaced all QRect, QSize and QPoint with KRect, KSize, KPoint. This fixes
  lots of calculation bugs with long documents.
- Fixed another bug with resizing frames

Reggie, 7.11.1998:
------------------
- Implemented saving/loading picture frames (currently it only saves filenames)
- Fixed many, many bugs

Reggie, 12.11.1998:
-------------------
- Scrolling is faster now (esp. for long documents)

Reggie, 14.11.1998:
-------------------
- ptYEnd is set correctly for each paragraph now
- setting the text cursor with the mouse and selecting text with the mouse is faster for long textes now
- started implementing style templates
- the number of pages is calculated correctly now

Reggie, 15.11.1998:
-------------------
- More work on style templates

Reggie, 16.11.1998:
-------------------
- More work on the stylist (style editor, style manager, ...)

Reggie, 18.11.1998:
-------------------
- Added tab to the paragraph layout dialog for configuration of paragraph borders
- Use this border config tab in the stylist too

Reggie, 19.11.1998:
-------------------
- Started adding tab to the paragraph layout dialog for configuration of numbering (different list types and chapter numbering)
- Use this tab in stylist too
- Started implementing of internal stuff for using style templates in the documents

Reggie, 20.11.1998:
-------------------
- More work on numbering (internal stuff and configuration dialog)

Reggie, 21.11.1998:
-------------------
- Worked a lot on numbering - it starts really working now :-)

Reggie, 22.11.1998:
-------------------
- Applying style templates works (this means chapter numbering, all types of lists, etc. is possible now :-)
- Modifying style templates in the stylist works - but the text doesn't get updated at the moment (this will come)
  The style template stuff starts working now - there are still lots of bugs and problems in it on which I will
  work tomorrow.